--- a/src/WebSite/ClnqWebSite/src/app/components/header/header.component.html
+++ b/src/WebSite/ClnqWebSite/src/app/components/header/header.component.html
@@ -25,9 +25,9 @@
                 <ul class="menu">
                     <li (click)="navigateTo('accueil')"><a id="accueil" h>Accueil</a></li>
                     <li (click)="navigateTo('patients')"><a id="patients">Patients</a></li>
-                    <li (click)="navigateTo('rdv')"><a id="rdv">Rdv médical</a></li>
-                    <li (click)="navigateTo('patients')"><a id="assitante">Assitante</a></li>
-                    <li (click)="navigateTo('patients')"><a id="parametres">Parametres</a></li>
+                    <!-- <li (click)="navigateTo('rdv')"><a id="rdv">Rdv médical</a></li> -->
+                    <li><a id="assitante">Assitante</a></li>
+                    <li><a id="parametres">Parametres</a></li>
                     <li class="slider"></li>
                 </ul>
             </div>
