--- a/src/WebSite/ClnqWebSite/src/app/views/patientsDatails/patientsDetail.component.scss
+++ b/src/WebSite/ClnqWebSite/src/app/views/patientsDatails/patientsDetail.component.scss
@@ -749,3 +749,35 @@ border: none !important;
     font-weight: 500;
     color:#7d7d7d;
 }
+
+.box-shadow
+{
+    margin-top: 15px;
+    padding: 5px;
+    border-radius: 6px;
+    box-shadow: 0 1px 4px 1px rgba(0, 0, 0, 0.15);
+}
+.body
+{
+    background-color: #e9e7e7;
+}
+.info-title
+{
+    margin: 5px;
+}
+
+::ng-deep .dx-form-group-caption
+{
+    padding-left: 10px;
+    font-size: 16px;
+    font-weight: 500;
+    color: #8c54ac;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+  }
+
+
+  
