--- a/src/WebSite/ClnqWebSite/src/app/views/patients/patients.component.scss
+++ b/src/WebSite/ClnqWebSite/src/app/views/patients/patients.component.scss
@@ -115,7 +115,11 @@ border: none !important;
 }
 
 .rowStyle{
+    background-color: white !important;
+   
     color: #00679a !important;
+    //border-radius: 6px;
+    box-shadow: 0 0px 2px 0px rgba(0, 0, 0, 0.15);
 }
 .thing {
     padding: 1rem;
