--- a/src/WebSite/ClnqWebSite/src/app/components/header/header.component.html
+++ b/src/WebSite/ClnqWebSite/src/app/components/header/header.component.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="two" fxflex="80" fxlayoutalign="center center"
                     style="align-items: center; flex-direction: row; box-sizing: border-box; display: flex; flex: 1 1 100%;padding-left: 74px;">
-                    Bienvenue NECIB Farouk</div>
+                    Bienvenue </div>
             </div>
         </div>
         <div style="flex: 1 1 100%; box-sizing: border-box; max-width: 100%;">
